--- a/style.css
+++ b/style.css
@@ -172,3 +172,27 @@ p {
     box-shadow: var(--light-shadow);
     height: 15rem;
 }
+
+.img:hover {
+    box-shadow: var(--dark-shadow);
+}
+
+/*
+===============
+Modal
+===============
+*/
+
+.modal {
+    position: fixed;
+    z-index: -1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(0, 0, 0);
+    transition: var(--transition);
+    opacity: 0;
+    min-height: 100vh;
+    overflow: scroll;
+}
