--- a/style.css
+++ b/style.css
@@ -212,3 +212,32 @@ Modal
     border-color: transparent;
     cursor: pointer;
 }
+
+.next-btn,
+.prev-btn {
+    position: absolute;
+    top: 10rem;
+    transform: translateY(-50%);
+    background: transparent;
+    font-size: 2rem;
+    color: var(--clr-white);
+    border-color: transparent;
+    cursor: pointer;
+}
+
+.prev-btn {
+    left: -2.5rem;
+}
+
+.next-btn {
+    right: -2.5rem;
+}
+
+@media screen and (min-width: 768px) {
+    .prev-btn {
+        left: -4rem;
+    }
+    .next-btn {
+        right: -4rem;
+    }
+}
