--- a/style.css
+++ b/style.css
@@ -249,3 +249,17 @@ Modal
   margin-top: 10rem;
   position: relative;
 }
+
+.main-img {
+  width: 100%;
+  height: 20rem;
+  object-fit: cover;
+  border-radius: var(--radius);
+}
+
+.image-name {
+  text-align: center;
+  margin: 1rem 0 3rem;
+  color: var(--clr-white);
+}
+
