--- a/style.css
+++ b/style.css
@@ -263,3 +263,24 @@ Modal
   color: var(--clr-white);
 }
 
+.modal-images {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.modal-img {
+  width: 100%;
+  height: 5rem;
+  object-fit: cover;
+  opacity: 0.5;
+  transition: var(--transition);
+  cursor: pointer;
+}
+
+.modal-img:hover {
+  opacity: 1;
+}
+
+.modal-img.selected {
+  opacity: 1;
+}
